# nix-fix-rustup

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: rust.yaml
src/: error.rs  lib.rs  main.rs  nix.rs
